Add rerun functionality for builds
